style.css
@font-face {
    font-family: 'Roboto';
    src: url('./assets/fonts/Roboto/Roboto-Regular.woff2') format('woff2'),
        url('./assets/fonts/Roboto/Roboto-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

:root {
  --primary-color: rgb(255, 255, 255);
  --secondary-color: rgb(8, 145, 178);
  --about-me-img-width: 270px;
  --about-me-img-height: 405px;
}

.wrapper {
  display: flex;
  flex-direction: column;
  gap: 5rem;
}

.about-me {
  padding: calc(.5rem + 5vw);
  padding-top: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.about-me::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: var(--secondary-color);
  clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 47%);
}

.about-me .content-container {
  margin-top: calc(.5rem + 5vw);
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.about-me p {
  color: #616060;
  line-height: 1.5;
}

.profile-image-container {
  position: relative;
}

.profile-image-container img {
  width: 100%;
  height: 100%;
}

.about-me i {
  font-size: 1.7rem;
}

h1 {
  position: absolute;
  top: 66%;
  left: 5%;
  color: var(--primary-color);
  font-size: 5rem;
  z-index: 1;
}

h2 {
  font-size: 2.5rem;
  text-align: center;
}

p {
  font-family: "Roboto";
}

.about-me .social-links {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.my-work {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

.my-work-title {
  text-align: center;
}

.cards-container {
  display: grid;
  gap: 3em;
}

.project-card {
  max-width: 300px;
  padding-bottom: 3em;
  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
}

.project-details {
  padding: 1rem;
}

.project-name-and-links {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.project-name {
  display: inline-block;
  margin-left: 1em;
  font-size: 1.2rem;
}

.project-links {
  display: flex;
  gap: 10px;
}

.project-links i {
  font-size: 1.2rem;
}

.project-links svg {
  width: 1.2rem;
}

.project-description {
  font-size: .9rem;
  color: #616060;
  line-height: 1.2;
  padding: 10px;
}

.contact-me {
  background-color: var(--secondary-color);
  color: var(--primary-color);
  padding: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 4rem;
  padding-bottom: 0;
}

.contact-me a {
  text-decoration: none;
}

.contact-me-info {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.contact-me-text {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  line-height: 1.2;
  font-family: 'Roboto';
}

.contact-me-text p {
  font-size: 1.2rem;
}

.address {
  display: flex;
  flex-direction: column;
}

.phone-and-email a {
  color: var(--primary-color);
}

.phone-and-email
 svg {
  display: none;
}

.contact-me-social-links {
  display: flex;
  justify-content: center;
  gap: 1.5rem;
}

.contact-me i {
  font-size: 2.2rem;
}

.contact-me-image-container {
  height: 480px;
  width: 100vw;
}

.contact-me-image-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

@media (min-width: 425px) {
  .about-me img {
    width: calc(var(--about-me-img-width) + 15vw);
    height: calc(var(--about-me-img-height) + 15vw);
  }
}

@media (min-width: 767px) {
  .wrapper {
    gap: 2rem;
  }

  .about-me::before {
    clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 53%);
  }

  .about-me .content-container {
    display: block;
    position: relative;
    background-color: var(--primary-color);
    max-width: 592px;
    z-index: 1;
    padding: 2rem;
    padding-top: 5rem;
    margin-top: 8rem;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
}

  .profile-image-container {
    width: 267px;
    height: 200px;
    float: left;
  }

  .about-me img {
    width: 20rem;
    height: 23rem;
    position: absolute;
    top: -89%;
    left: -29%;
    object-fit: cover;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  }

  h1 {
    position: absolute;
    top: -10%;
    left: -62%;
    width: 28rem;
  }

  p.about-details {
    font-size: 1.1rem;
  }

  p.about-details,
  .social-links {
    margin-top: 1rem;
  }

  .about-me .social-links {
    justify-content: flex-end;
  }

  .my-work {
    margin: 0 auto;
  }

  .my-work-title {
    align-self: flex-start;
  }

  .cards-container {
    grid-template-columns: 1fr 1fr;
  }

  .contact-me {
    margin-top: 12rem;
    padding: 3rem;
    flex-direction: row;
  }
  
  .contact-me-info {
    align-items: flex-start;
  }

  .phone-number,
  .email {
    display: flex;
    align-items: center;
    gap: 12px;
  }

  .phone-and-email {
    display: flex;
    flex-direction: column;
    gap: 12px;
  }

  .phone-and-email svg {
    display: inline-block;
    width: 1.6rem;
    fill: var(--primary-color);
  }

  .contact-me-image-container {
    height: 388px;
    width: 415px;
  }
}

@media (min-width: 1200px) {
  .wrapper {
    gap: 4rem;
  }
  
  .about-me .content-container {
    position: relative;
    margin-left: 27rem;
    margin-top: 6rem;
  }

  .profile-image-container {
    position: absolute;
    left: 0;
  }
        
  .about-me img {
    width: 28rem;
    height: 28rem;
    position: absolute;
    top: -59%;
    left: -167%;
  }

  h1 {
    width: 28rem;
    position: absolute;
    top: 194%;
    left: -170%;
  }

  .about-me-title {
    text-align: start;
  }

  .cards-container {
    grid-template-columns: repeat(3, 1fr);
  }

  .contact-me {
    justify-content: center;
    align-items: flex-start;
    margin-top: 2rem;
  }

  .contact-me-text {
    font-size: 1.2rem;
  }

  .contact-me-text p {
    width: 30ch;
  }

  .contact-me-image-container {
    width: 37rem;
    height: auto;
  }
}

